--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Miriam+Libre&display=swap');
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,104 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.div{
+    border:'1px solid red';
+   
+  
+}
+.mainDiv {
+  padding: 24px;
+  margin: 0;
+  
+  
+}
+
+.Borde{
+  border: 1px solid red;
+}  
+
+.Cont1{
+  font-family: 'Bungee', cursive;
+  display: flex;
+  max-width: 100%;
+  margin: 20px;
+  height: 700px;
+  border: 1px solid red;
+  padding: 40px;
+}
+
+.Cont2{
+  background-color: #ffffff;
+  width: 20%;
+  height: 700px;
+  border: 1px solid rgb(216, 216, 216);
+  border-radius: 10px;
+  overflow-y: scroll;
+  white-space: nowrap; 
+  font-family: 'Miriam Libre', sans-serif;
+  
+
+}
+
+.Cont3{
+  width: 30%;
+  padding: 20px;
+  height: 660px;
+  margin-left: 40px;
+  border: 1px solid red;
+}
+.Cont4{
+  width: 50%;
+  padding: 10px;
+  height: 680px;
+  margin-left: 40px;
+  border: 1px solid red;
+}
+
+.img{
+  width: 100%;
+  height: 85%;
+  border: 1px solid red;
+}
+
+.header{
+  font-family: 'Bungee', cursive;
+  font-size: 30px;
+  background-color: #61dafb;
+}
+.Cont2::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.Cont2::-webkit-scrollbar:vertical {
+  width:5px;
+}
+
+.Cont2::-webkit-scrollbar-button:increment,.contenedor::-webkit-scrollbar-button {
+  display: none;
+} 
+
+.Cont2::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+
+.Cont2::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 20px;
+  border: 2px solid #f1f2f3;
+}
+
+.Cont2::-webkit-scrollbar-track {
+  border-radius: 10px;  
+}
+
+.h2{
+  font-size: 30px;
+  margin-left: 10px;
+}
+
+.listaitems{
+  border: 1px solid #eaeaea;
 }
