--- a/src/App.css
+++ b/src/App.css
@@ -2,46 +2,10 @@
 body{
  background-color: #e5e7e8
 } 
-@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Miriam+Libre&display=swap');
 
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;600&family=Bungee&family=Miriam+Libre&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .div{
     border:'1px solid red';
@@ -56,7 +20,7 @@ body{
 }
 
 .Borde{
-  border: 1px solid rgb(0, 0, 255);
+  
   padding: 10px;
   display: flex;
   flex-direction: row-reverse;
@@ -71,8 +35,9 @@ body{
   max-width: 100%;
   margin: 20px;
   height: 700px;
-  border: 1px solid red;
+ 
   padding: 40px;
+  font-family: 'Barlow Condensed', sans-serif;
 }
 
 .Cont2{
@@ -83,19 +48,18 @@ body{
   border-radius: 10px;
   overflow-y: scroll;
   white-space: nowrap; 
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
   
 
 }
 
 .Cont3{
   width: 30%;
-  padding: 20px;
-  height: 660px;
+  height: 100%;
   margin-left: 40px;
-  border: 1px solid red;
+  
   color: #f10000;
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
   font-weight: bold;
 }
 .Cont4{
@@ -103,22 +67,38 @@ body{
   padding: 10px;
   height: 680px;
   margin-left: 40px;
-  border: 1px solid red;
+  
+  font-family: 'Barlow Condensed', sans-serif;
 }
 .img2{
   width: 150px;
-  height: 100px;
+  padding-right: 30px;
+  height: 50px;
 }
 .img{
   width: 100%;
-  height: 85%;
-  border: 1px solid red;
+  height: 92%;
+  margin-top: 10px;
+
+
 }
+.img5{
+  width: 70px;
+  height: 60px;
+  padding-left: 30px;
+}
+ .juntar{
+
+  margin: 0,0,0,0;
+  padding: 1px;
+  width: 100%;
+  
+ }
 
 .header{
-  font-family: 'Bungee', cursive;
+  font-family: 'Barlow Condensed', sans-serif;
   font-size: 30px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .Cont2::-webkit-scrollbar {
   -webkit-appearance: none;
@@ -147,13 +127,16 @@ body{
 }
 
 .h2{
-  font-size: 30px;
+  font-size: 17px;
+  font-family: 'Barlow Condensed', sans-serif;
   margin-left: 10px;
-  color: #2844c0;
+  color: #ff0000;
+
 }
 
 .listaitems{
   border: 1px solid #eaeaea;
+  font-size: 14px;
 }
 
 .nueva{
@@ -161,21 +144,27 @@ body{
   
   
 }
+.nombre{
+  padding: 0;
+  margin: 0;
+  font-size: 40px;
+  color: #ff0000;
+}
 
 .h3{
  color: #f10000;
  width: 500;
- font-size: 20px;
- font-family: 'Miriam Libre', sans-serif;
+ font-size: 30px;
+ font-family: 'Barlow Condensed', sans-serif;
  font-weight: bold;
 }
 
 .h4{
-  color: #282c34;
+  color: #ffffff;
   width: 500;
   font-size: 14px;
   padding: 0px;
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
 }
 
 .btn1 {
@@ -186,7 +175,7 @@ body{
   box-sizing: border-box;
   color: #FFFFFF;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 18px;
   outline: 0;
   padding: 12px 14px;
   text-rendering: geometricprecision;
@@ -194,7 +183,7 @@ body{
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Barlow Condensed', sans-serif;
   
 }
 
@@ -216,5 +205,74 @@ body{
 .info{
   margin-top: 10px;
   height: 80%;
-  border: 1px solid #cc6969;
+  border: #f0efef 1px solid;
 }
+
+.footer{
+  font-family: 'Barlow Condensed', sans-serif;
+  height: 200px;
+}
+.display{
+  display: flex;
+}
+.img3{
+  width: 100px;
+  height: 40px;
+  margin-top: 30px;
+  align-items:center;
+}
+
+.box1{
+  padding: 10px;
+  margin-top: 10px;
+  font-size: 20px;
+  font-family: 'Barlow Condensed', sans-serif;
+}
+
+.btn2 {
+  background: #ec1f1f;
+  border: 1px solid #e90f0feb;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 18px;
+  outline: 0;
+  margin-right: 20px;
+  padding: 12px 14px;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: 'Barlow Condensed', sans-serif;
+  
+}
+
+.random{
+  align-items: right;
+}
+
+.btn2:hover,
+.btn2:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #fe0f0f;
+}
+
+.btn2:active {
+  opacity: .5;
+}
+
+.juntar1{
+ 
+  margin: 0,0,0,0;
+  padding: 1px;
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  
+ }
+
+ 
